Adds taxon api endpoint to swagger docs
